--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -12,7 +12,7 @@ html[data-theme="light"] {
    --bg1-color: #fff;
   --col-icon-dribbble: #ea4c89;
   --col-icon-linkedin: #0e76a8;
-  --col-icon-kaggle: #41aff3;  
+  --col-icon-kaggle: #25D366;  
   --col-icon-instagram: rgb(201, 94, 174);
   --col-icon-mail:rgb(209, 82, 82);
   --col-icon-google-scholar:#3cba54;
@@ -156,6 +156,7 @@ html[light-mode="dark"] .socialicon{
 
 .socialicon.kaggle{
   color:var(--col-icon-kaggle);
+  text-decoration: none;
 }
 
 .socialicon:after {
@@ -170,7 +171,8 @@ html[light-mode="dark"] .socialicon{
 }
 
 .socialicon.kaggle:after {
-  background-color: #41aff3;
+  background-color: #25D366;
+  text-decoration: none;
   box-shadow: var(--kaggle);
 }
 
