--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -207,6 +207,32 @@ a:hover {
   background: rgba(0, 0, 0, 0.55);
 }
 
+@media (min-width:960px) {
+  .card .discription{                       /*Addition*/
+    position: absolute;                   
+    top: 55px;
+    display: none;
+  
+  }
+  .skill-card .wrapper:hover .discription{
+    display: block;
+  }
+  
+}
+@media (max-width: 959px){
+  .card .discription{                       /*Addition*/
+    position: absolute;                   
+    top: 89px;
+    display: none;
+  
+  }
+  .skill-card .wrapper:hover .discription{
+    display: block;
+  }
+  
+}
+
+
 @media (min-width: 60rem) {
   .card .data {
     height: 76%;
@@ -424,6 +450,12 @@ ul {
     padding-bottom: 7rem;
     font-size: 3rem;
   }
+  .card .discription{                       /*Addition*/
+    position: absolute;                   
+    
+  
+  }
+
 }
 
 @media (min-width: 374px) and (max-width: 375px) {
@@ -436,6 +468,7 @@ ul {
     margin-bottom: 0px;
     font-size: 2rem;
   }
+ 
 }
 
 @media (min-width: 410px) and (max-width: 411px) {
@@ -516,6 +549,7 @@ ul {
   .project-box {
     margin-top: 18rem;
   }
+
 }
 
 @media only screen and (max-width: 450px) {
