--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ html[data-theme="light"] {
   --col-icon-twitter: #1da1f2;
   --col-icon-dribbble: #ea4c89;
   --col-icon-linkedin: #0e76a8;
-  --col-icon-kaggle: #41aff3;
+  --col-icon-kaggle: #25D366;
   --col-icon-github: #24292e;
   --col-icon-instagram: rgb(201, 94, 174);
   --col-icon-mail: rgb(209, 82, 82);
@@ -51,7 +51,7 @@ html[data-theme="dark"] {
   --col-icon-twitter: #1da1f2;
   --col-icon-dribbble: #ea4c89;
   --col-icon-linkedin: #0e76a8;
-  --col-icon-kaggle: #41aff3;
+  --col-icon-kaggle: #25D366;
   --col-icon-github: #24292e;
   --col-icon-instagram: rgb(201, 94, 174);
   --col-icon-mail: rgb(209, 82, 82);
@@ -129,6 +129,7 @@ body {
   right: 10px;
   animation: up 1.5s infinite;
   -webkit-animation: up 1.5s infinite;
+  
 }
 
 
