--- a/assets/css/techstack.css
+++ b/assets/css/techstack.css
@@ -183,6 +183,11 @@ div.techstack_icon>i:hover {
     transition: opacity .2s linear;
     transform: scale(1.3);
 }
+div.techstack_icon>img:hover {
+    opacity: 1;
+    transition: opacity .2s linear;
+    transform: scale(1.3);
+}
 
 div.html_icon.techstack_icon>i.fa-html5 {
     /* color: #FF5733 !important; */
@@ -205,7 +210,13 @@ div.techstack_icon>i.fa-css3-alt {
 }
 
 div.techstack_icon>i.fa-bootstrap {
-    color: #ad428d !important;
+    display: inline-block;
+    background-image: linear-gradient(to right, #553C9A, #E43A45);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+    
 }
 
 div.techstack_icon>i.fa-js-square {
@@ -229,12 +240,27 @@ div.techstack_icon>i.fa-git-alt {
     color: #F1502F;
 }
 
-div.techstack_icon>i.fa-node {
-    color: #3C873A;
+div.techstack_icon>i.fa-linux {
+    color: #000; 
 }
 
 div.techstack_icon>i.fa-cuttlefish {
     color: #044F88;
+}
+div.techstack_icon>i.fa-angular {
+    display: inline-block;
+    background: -moz-linear-gradient(top, #e72c83 0%, #a742c6 100%);
+    background: -webkit-linear-gradient(top, #e72c83 0%, #a742c6 100%);
+    background: linear-gradient(to bottom, #e72c83 0%, #a742c6 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+}
+div.techstack_icon>img{
+    display: inline-block;
+    height: 35px;
+    width: 40px;
 }
 #box1{
     animation: slide-down 8s infinite linear;
